@@ -1,5 +1,7 @@
+ARG BASE_DOCKER=broadinstitute/gatk:gatkbase-3.1.0
+
 # stage 1 for constructing the GATK zip
-FROM broadinstitute/gatk:gatkbase-2.3.0 AS gradleBuild
+FROM ${BASE_DOCKER} AS gradleBuild
 LABEL stage=gatkIntermediateBuildImage
 ARG RELEASE=false
 
@@ -8,9 +10,16 @@ ADD . /gatk
 WORKDIR /gatk
 
 # Get an updated gcloud signing key, in case the one in the base image has expired
-RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
-RUN add-apt-repository universe && apt update
-RUN apt-get --assume-yes install git-lfs
+RUN rm /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    apt update &&\
+    apt-key list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
+    add-apt-repository universe && apt update && \
+    apt-get --assume-yes install git-lfs && \
+    apt-get -y clean  && \
+    apt-get -y autoclean  && \
+    apt-get -y autoremove && \
+    rm -rf /var/lib/apt/lists/*
 RUN git lfs install --force
 
 #Download only resources required for the build, not for testing
@@ -19,12 +28,21 @@ RUN git lfs pull --include src/main/resources/large
 RUN export GRADLE_OPTS="-Xmx4048m -Dorg.gradle.daemon=false" && /gatk/gradlew clean collectBundleIntoDir shadowTestClassJar shadowTestJar -Drelease=$RELEASE
 RUN cp -r $( find /gatk/build -name "*bundle-files-collected" )/ /gatk/unzippedJar/
 RUN unzip -o -j $( find /gatk/unzippedJar -name "gatkPython*.zip" ) -d /gatk/unzippedJar/scripts
+RUN chmod -R a+rw /gatk/unzippedJar
 
-# Using OpenJDK 8
-FROM broadinstitute/gatk:gatkbase-2.3.0
+FROM ${BASE_DOCKER}
+
+RUN rm /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    apt update && \
+    apt-key list && \
+    apt-get -y clean  && \
+    apt-get -y autoclean  && \
+    apt-get -y autoremove && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /gatk
 
+RUN chmod -R a+rw /gatk
 # Location of the unzipped gatk bundle files
 COPY --from=gradleBuild /gatk/unzippedJar .
 
@@ -45,6 +63,8 @@ WORKDIR /gatk
 
 # Create a simple unit test runner
 ENV CI true
+# "export GATK_DOCKER_CONTAINER=true" is used to allow tests to determine when the're running on the docker
+# (some negative python tests use this to throw skip exceptions). See GATKBaseTest::isGATKDockerContainer.
 RUN echo "source activate gatk" > /root/run_unit_tests.sh && \
     echo "export GATK_DOCKER_CONTAINER=true" >> /root/run_unit_tests.sh && \
     echo "export TEST_JAR=\$( find /jars -name \"gatk*test.jar\" )" >> /root/run_unit_tests.sh && \
@@ -54,11 +74,11 @@ RUN echo "source activate gatk" > /root/run_unit_tests.sh && \
     echo "mkdir /gatk/srcdir" >> /root/run_unit_tests.sh && \
     echo "cp -rp /gatkCloneMountPoint/src/main/java/* /gatk/srcdir" >> /root/run_unit_tests.sh && \
     echo "export SOURCE_DIR=/gatk/srcdir" >> /root/run_unit_tests.sh && \
-    echo "export GRADLE_OPTS=\"-Xmx1024m -Dorg.gradle.daemon=false\"" /root/run_unit_tests.sh && \
-    echo "export CP_DIR=/gatk/testClasses" /root/run_unit_tests.sh && \
+    echo "export GRADLE_OPTS=\"-Xmx1024m -Dorg.gradle.daemon=false --add-opens java.prefs/java.util.prefs=ALL-UNNAMED\"" >> /root/run_unit_tests.sh && \
+    echo "export CP_DIR=/gatk/testClasses" >> /root/run_unit_tests.sh && \
     echo "ln -s /gatkCloneMountPoint/src/ /gatkCloneMountPoint/scripts/docker/src" >> /root/run_unit_tests.sh && \
     echo "ln -s /gatkCloneMountPoint/build/ /gatkCloneMountPoint/scripts/docker/build" >> /root/run_unit_tests.sh && \
-    echo "cd /gatk/ && /gatkCloneMountPoint/gradlew -b /gatkCloneMountPoint/dockertest.gradle testOnPackagedReleaseJar jacocoTestReportOnPackagedReleaseJar -a -p /gatkCloneMountPoint" >> /root/run_unit_tests.sh
+    echo "cd /gatk/ && /gatkCloneMountPoint/gradlew -Dfile.encoding=UTF-8 -b /gatkCloneMountPoint/dockertest.gradle testOnPackagedReleaseJar jacocoTestReportOnPackagedReleaseJar -a -p /gatkCloneMountPoint" >> /root/run_unit_tests.sh
 
 WORKDIR /root
 RUN cp -r /root/run_unit_tests.sh /gatk
@@ -68,7 +88,6 @@ ENV CLASSPATH /gatk/gatk.jar:$CLASSPATH
 # Start GATK Python environment
 
 WORKDIR /gatk
-RUN chmod -R a+rw /gatk
 ENV PATH $CONDA_PATH/envs/gatk/bin:$CONDA_PATH/bin:$PATH
 RUN conda env create -n gatk -f /gatk/gatkcondaenv.yml && \
     echo "source activate gatk" >> /gatk/gatkenv.rc && \
